--- a/README
+++ b/README
@@ -34,6 +34,18 @@ Options:
   --proxy=PROXY
   --location            Follow redirects
   --insecure
+  -s, --speed           Add download transfer speed in kB/s to performance
+                        data. Only works with last check when using yaml
+                        runfile
+  --speedwarn=SPEEDWARN
+                        Transfer speed limit warn limit in kB/s (requires
+                        --speed parameter)
+  --speedcrit=SPEEDCRIT
+                        Transfer speed limit critical limit in kB/s (requires
+                        --speed parameter)
+  --userpwd=USERPWD     username:password
+  -v, --verbose
+
 
 check_pycurl can run in one of two ways, a simple one-off http check (specify the url with -u)
 or with a runfile which is written in yaml and can be used to specify multi-stage url checks (eg
@@ -43,6 +55,9 @@ By default check_pycurl will test for HTTP 200 code (--test code:200)
 
 An alternate test is for presence of regex in the output (--test regex:t.st)
 
+Login to protected sites can be performed via different possibilities.
+The userpwd option should be prefered to providing the password via URL (https://<username>:password@...)
+since the URL is printed in case of errors.
 
 EXAMPLE RUNFILE
 
